home work fixed

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   width="370"
                 />
                 <div class="overlay-wrap-about">
-                  <p>Десктопні додатки</p>
+                  <h3 class="about-title-second">Десктопні додатки</h3>
                 </div>
               </div>
             </li>
@@ -147,7 +147,7 @@
                   width="370"
                 />
                 <div class="overlay-wrap-about">
-                  <p>Мобільні додатки</p>
+                  <h3 class="about-title-second">Мобільні додатки</h3>
                 </div>
               </div>
             </li>
@@ -161,7 +161,7 @@
                   width="370"
                 />
                 <div class="overlay-wrap-about">
-                  <p>Дизайнерські рішення</p>
+                  <h3 class="about-title-second">Дизайнерські рішення</h3>
                 </div>
               </div>
             </li>
