--- a/portfolio.html
+++ b/portfolio.html
@@ -93,8 +93,10 @@
                   </p>
                 </div>
               </div>
-              <h2 class="portfolio-list-name">Технокряк</h2>
-              <p class="portfolio-list-class">Веб-сайт</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Технокряк</h2>
+                <p class="portfolio-list-class">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -113,9 +115,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-list-class">Дизайн</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-list-class">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -134,9 +137,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Ресторан Seafood</h2>
-              <p class="portfolio-list-class">Додаток</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Ресторан Seafood</h2>
+                <p class="portfolio-list-class">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -155,9 +159,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Проєкт Prime</h2>
-              <p class="portfolio-list-class">Маркетинг</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Проєкт Prime</h2>
+                <p class="portfolio-list-class">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -176,9 +181,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Проєкт Boxes</h2>
-              <p class="portfolio-list-class">Додаток</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Проєкт Boxes</h2>
+                <p class="portfolio-list-class">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -197,9 +203,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Inspiration has no Borders</h2>
-              <p class="portfolio-list-class">Веб-сайт</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Inspiration has no Borders</h2>
+                <p class="portfolio-list-class">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -218,9 +225,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Видання Limited Edition</h2>
-              <p class="portfolio-list-class">Дизайн</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Видання Limited Edition</h2>
+                <p class="portfolio-list-class">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -239,9 +247,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Проєкт LAB</h2>
-              <p class="portfolio-list-class">Маркетинг</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Проєкт LAB</h2>
+                <p class="portfolio-list-class">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <div class="img-overlay">
@@ -260,9 +269,10 @@
                   </p>
                 </div>
               </div>
-
-              <h2 class="portfolio-list-name">Growing Business</h2>
-              <p class="portfolio-list-class">Додаток</p>
+              <div class="portfolio-list-bottom">
+                <h2 class="portfolio-list-name">Growing Business</h2>
+                <p class="portfolio-list-class">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
